data/all_generated_tests/raw_wast_tests/unreachable_StackCorruption_970.wast
;; Here's a list of 10 unique differential test descriptions for testing the `unreachable` instruction in WebAssembly and Wizard Engine for potential stack corruption issues:  1. **Test Description:**    A function containing a sequence of `unreachable` followed by instructions that manipulate different types on the stack. This tests if `unreachable` prevents further stack operations.    <br>**Constraint:** Verify stack remains uncorrupted after `unreachable` is executed without further execution of subsequent instructions.

(assert_invalid
  (module
    (func $unreachable-follow-mixed-stack
      unreachable
      i32.const 1
      f32.const 0.0
      f64.const 0.0
      i64.const 1
    )
  )
 "type mismatch"
)